# problemKomiOK

./: .gitignore  AlgorytmGenetyczny.cpp  AlgorytmGenetyczny.h  AlgorytmMrowkowy.cpp  AlgorytmMrowkowy.h  CMakeLists.txt  Graf.cpp  Graf.h  HeurystykaNajblizszegoSasiada.cpp  HeurystykaNajblizszegoSasiada.h  MetodaSilowaPermutacje.cpp  MetodaSilowaPermutacje.h  Osobnik.h  README.md  Rozwiazanie.cpp  Rozwiazanie.h  main.cpp  metodaSilowaDFS.cpp  metodaSilowaDFS.h
